Various summary page css fixes (incl. hack for wrapping review text)

--- a/css/checkmate.css
+++ b/css/checkmate.css
@@ -283,6 +283,15 @@ hr {
 .summary_page .rightcol {
 	float:right;
 }
+.summary_page .review_image {
+    float:left;
+    max-width:16%;
+}
+.summary_page .review_text {
+    float:left;
+    max-width:83%;
+    word-wrap: break-word;
+}
 
 .add_review_button {
 	text-align: center;
